--- a/style.css
+++ b/style.css
@@ -8,14 +8,12 @@ body {
   margin: 0;
   background-image: url("img/balogovicBg.jpg");
   min-height: 100vh;
-  background-size: cover;
-  background-position: center center;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-repeat: no-repeat;
-  /* media query for phones */
 }
 
 .countdown-container {
@@ -37,4 +35,35 @@ h1 {
   padding: 10px;
   text-align: center;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1000px) {
+  .big-text {
+    font-size: 3rem;
+    margin: 0 1rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  .countdown-label {
+    font-size: 1.5rem;
+    padding: 8px;
+  }
+}
+@media screen and (max-width: 680px) {
+  .big-text {
+    font-size: 2rem;
+    margin: 0 0.7rem;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+
+  .countdown-label {
+    font-size: 1rem;
+    padding: 6px;
+  }
 }
